# cerebot2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cerebot_commands.csv  docker-compose-dev.yml  docker-compose.yml
bot/: Cargo.toml
bot/src/: cerebot.rs  config.rs  dispatch.rs  error.rs  event.rs  main.rs  state.rs  template_renderer.rs  util.rs
bot/src/handlers/: bot_state.rs  logging.rs
bot/src/handlers/commands/: channel.rs  command.rs  error.rs  mod.rs  netflix.rs  reload.rs  restart.rs  say.rs  templates.rs
bot/src/state/: command_store.rs  permission_store.rs
bot/src/template_renderer/: context_providers.rs  mod.rs
migrations/2019-11-16-163330_create_initial_schema/: down.sql  up.sql
migrations/2019-11-23-184345_updated_trigger_setup/: down.sql  up.sql
migrations/2019-11-23-201326_add_permission_tables/: down.sql  up.sql
migrations/2019-11-24-232543_add_command_tables/: down.sql  up.sql
migrations/2019-11-25-004353_add_silent_channel_switch/: down.sql  up.sql
migrations/2019-11-29-214610_improve_command_config/: down.sql  up.sql
migrations/2019-12-01-153246_create_command_alias_table/: down.sql  up.sql
migrations/2019-12-09-211451_allow_no_channel_prefix/: down.sql  up.sql
migrations/2019-12-16-000547_add_command_templates/: down.sql  up.sql
migrations/2019-12-17-000018_set_created_at_not_null/: down.sql  up.sql
migrations/2019-12-17-223041_add_template_context/: down.sql  up.sql
migrations/2020-01-07-235118_partition_events_table/: down.sql  up.sql
persistence/: Cargo.toml
persistence/src/: cache.rs  channel.rs  chat_event.rs  lib.rs  pagination.rs  permissions.rs  redis_values.rs  schema.rs  user.rs
persistence/src/commands/: alias.rs  attributes.rs  channel_config.rs  mod.rs  permission.rs  templates.rs
src/: cache.rs  cerebot.rs  config.rs  dispatch.rs  error.rs  event.rs  main.rs  schema.rs  state.rs  template_renderer.rs  util.rs
src/db/: channel.rs  chat_event.rs  commands.rs  mod.rs  permissions.rs  user.rs
src/db/commands/: alias.rs  attributes.rs  channel_config.rs  mod.rs  permission.rs  templates.rs
src/handlers/: bot_state.rs  logging.rs  mod.rs
src/handlers/commands/: channel.rs  error.rs  hello_world.rs  mod.rs  reload.rs  say.rs  templates.rs
src/state/: command_store.rs  permission_store.rs
src/sync/: mod.rs  rwlock.rs
unogs_client/: Cargo.toml
unogs_client/examples/: genre_ids.rs
unogs_client/src/: genre_ids.rs  lib.rs
util/: Cargo.toml
web/backend/: Cargo.toml
web/backend/src/: config.rs  error.rs  main.rs
web/backend/src/models/requests/: pagination.rs
web/backend/src/models/responses/: command.rs  list.rs  mod.rs  problem_details.rs
web/backend/src/public_types/: commands.rs  mod.rs
web/backend/src/services/: commands.rs  mod.rs
web/ui/: .eslintignore  .eslintrc.js  next.config.js  package-lock.json  package.json  postcss.config.js  server-types.d.ts  tailwind.config.js  tsconfig.json  util.ts
web/ui/api-client/: api.ts  base.ts  configuration.ts  index.ts
web/ui/components/: button.css  button.tsx  commandsTable.tsx  footer.tsx  meta.jsx  meta.tsx  navigation.css  navigation.tsx  pagination.css  pagination.tsx  topBar.tsx
web/ui/components/page/: title.tsx
web/ui/hooks/: loading.ts  skipFirstRun.ts
web/ui/layouts/: page.tsx  pageContent.tsx
web/ui/lib/: util.ts
web/ui/pages/: doc.tsx  index.tsx
web/ui/pages/channels/: index.tsx
web/ui/pages/commands/: index.tsx
web/ui/public/: spec.yml
web/ui/styles/: style.css  table.css
web/ui/styles/swagger/: _variables.scss  main.css  main.scss
web/ui/types/: react-table-config.d.ts
