[package]
name = "cerebot2"
description = "Cerebot v2, a twitch chat bot. Exists partially to further development of tmi-rs, partially for its own sake."
repository = "https://github.com/cere42/cerebot2"
version = "0.1.0"
authors = ["cerebellum42 <cere@fastmail.fm>"]
edition = "2018"

[dependencies.tmi-rs]
git = "https://github.com/cere42/tmi-rs.git"
rev = "3ae7a7ea"

[dependencies]
futures = "^0.3"
log = "0.4.8"
tokio = { version = "0.2.4", features = ["blocking", "rt-threaded", "time", "macros"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
env_logger = "0.7.1"
toml = "0.5.5"
derive_builder = "0.9.0"
fnv = "1.0.6"
dirs = "2.0.2"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
r2d2 = "0.8.6"
r2d2_redis = "0.12.0"
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.6", features = ["serde"] }
bincode = "1.2.0"
async-trait = "0.1.19"
once_cell = "1.2"
double-checked-cell = { git = "https://github.com/cere42/async-double-checked-cell.git" }
crossbeam-utils = "0.7.0"
slab = "0.4.2"
dotenv = "0.15"
regex = "1.3"
structopt = "0.3"

[[bin]]
name = "cerebot2"
path = "src/main.rs"
