[package]
name = "persistence"
version = "0.1.0"
authors = ["cerebellum42 <cere@fastmail.fm>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core", "blocking"] }
log = "0.4"
tokio-diesel = "0.3.0"

# Twitch chat connector
serde = { version = "1", features = ["derive"] }

# only required for serde_json::Value to make JSONB columns work with diesel
serde_json = "1.0"

# connection pools and DB
r2d2 = "0.8"
darkredis = "0.5.2"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel_migrations = "1.4"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde"] }
fnv = "1.0.6"
once_cell = "1.2"

# used to serialize for redis storage
bincode = "1.2"