[package]
name = "backend"
version = "0.1.0"
authors = ["cerebellum42 <cere@fastmail.fm>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0.9"

# actix runtime/server
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2.0"

persistence = { path = "../../persistence" }

# logging
log = "0.4.8"
env_logger = "0.7.1"

serde = "1.0"
serde_json = "1.0"
validator = "0.10"
validator_derive = "0.10"

once_cell = "1.2.0"
